更新代码，完善测试用例。